# unyfy-matching-engine

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yaml  orders.txt
.github/workflows/: basic_checks.yml
adlib-contract/script/: AdLib.s.sol
adlib-contract/src/: AdLib.sol  Counter.sol
adlib-contract/test/: AdLib.t.sol
circuits/place/: place.r1cs  place.sym
circuits/place/place_cpp/: Makefile  place.cpp
circuits/place/place_js/: input.json  place.wasm  place_0000.zkey  place_0001.zkey  pot12_0001.ptau  verification_key.json  witness.wtns
contracts/cache/: solidity-files-cache.json
contracts/cancel-verifier-contract/src/: CancelVerifier.sol
contracts/cancel-verifier-contract/test/: CancelVerifier.t.sol
contracts/fill-verifier-contract/: verifier.sol
contracts/fill-verifier-contract/test/: FillVerifier.t.sol
contracts/src/: FillVerifier.sol  UnyfyDev.sol
contracts/unyfy-dev-contract/script/: UnyfyDev.s.sol
contracts/unyfy-dev-contract/src/: UnyfyDev.sol
contracts/unyfy-dev-contracts/src/: PlaceVerifier.sol
contracts/unyfy-dev-contracts/test/: UnyfyDev.t.sol
example/: challenge.txt  clearOrderbook.ts  constructedorders.txt  dev-endpoint-sample.ts  fillOrders.ts  generateKeys.ts  getCrossedOrders.ts  getcrossedorders.txt  jwt.txt  openOrders.ts  poseidon.ts  requestChallenge.ts  sample.ts  sample_2.ts  sendOrders.ts  sendorders.txt  signSendChallenge.ts  upgradecontract.ts  websocket_header_sample.ts
example/types/: circomlib.d.ts
src/: lib.rs  main.rs  matching.rs  models.rs  raw_order.rs  staging.rs
