[package]
name = "unyfy-matching-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
pretty_env_logger = "0.5.0"
futures-util = "0.3.29"
async-recursion = "1.0.5"
serde_derive = "1.0.190"
sha2 = "0.10.8"
bincode = "1.3.3"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ethnum = "1.5.0"
rand = "0.8.5"
csv = "1.3.0"
halo2curves = "0.4.0"
num-bigint = "0.4.4"
ethers = "2.0.11"
hex = "0.4.3"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
dotenv = "0.15.0"


